--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "@vueuse/core": "^12.7.0",
     "pinia": "^3.0.1",
+    "pixi.js": "^8.8.1",
     "tailwindcss": "^4.0.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -47,5 +48,5 @@
     "vitest": "^3.0.5",
     "vue-tsc": "^2.2.2"
   },
-  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
+  "packageManager": "pnpm@10.6.1"
 }
