--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ VITE_APP_NAME=webcasino
 VITE_API_PROTOCOL=http
 VITE_API_HOST=localhost
 VITE_API_PORT=8000
+
+# IPInfo
+VITE_IP_INFO_TOKEN=560B544DD9735C44B0D2367CD1AF6BDD
