--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pinia": "^3.0.1",
     "pixi.js": "^8.8.1",
     "tailwindcss": "^4.0.9",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0"
